# titan

./: .gitignore  .metadata  ACTION_PLAN.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  WARP.md  WEB_API_COMPLETION_CHECKLIST.md  WEB_API_COMPLETION_SUMMARY.md  analysis_options.yaml  pubspec.yaml  test_config.yaml
.github/workflows/: ci.yml
android/: local.properties
assets/: test_web_apis.html
assets/data/: blocked_domains.txt
docs/: DEVELOPER_TOOLS_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  WEB_API_IMPLEMENTATION_STATUS.md  WEB_API_QUICK_REFERENCE.md  WEB_API_TESTING.md
engine/: Cargo.toml
engine/titan_agent/: Cargo.toml
engine/titan_agent/src/: main.rs
examples/: web_api_demo.html
ios/Runner/: Info.plist
lib/: main.dart
lib/core/: app_router.dart  error_handler.dart  logger.dart  platform_theme.dart  responsive.dart  service_locator.dart  theme.dart
lib/models/: ai_task.dart  browser_tab.dart  browser_window.dart  extension.dart
lib/providers/: ai_provider.dart  browser_provider.dart
lib/screens/: account_screen.dart  ai_assistant_screen.dart  bookmarks_screen.dart  browser_screen.dart  browser_window_screen.dart  dev_tools_demo_screen.dart  downloads_screen.dart  extensions_screen.dart  history_screen.dart  settings_screen.dart
lib/services/: account_service.dart  agent_client_protocol.dart  ai_service.dart  ai_web_interaction_service.dart  autofill_service.dart  bookmark_manager_service.dart  browser_bridge.dart  browser_engine_service.dart  browser_import_service.dart  browser_security_service.dart  browser_service.dart  download_manager_service.dart  extension_manager_service.dart  extension_marketplace_service.dart  extension_service.dart  incognito_service.dart  javascript_engine_service.dart  mcp_server.dart  network_service.dart  networking_service.dart  performance_engine_service.dart  rendering_engine_service.dart  rust_engine_bridge.dart  sandboxing_service.dart  security_service.dart  sidecar_client.dart  storage_service.dart  (+5 more)
linux/: CMakeLists.txt  my_application.cc
rust_engine/: Cargo.toml  build.rs  cbindgen.toml
rust_engine/src/: ai.rs  core.rs  css.rs  ffi.rs  html.rs  javascript.rs  layout.rs  lib.rs  media.rs  networking.rs  rendering.rs  security.rs  storage.rs
test/: models_test.dart  test_runner.dart  widget_test.dart
windows/: CMakeLists.txt
(+38 files in other folders)
